feat: cambios de diseño y estilos, ademas integracion con sweetalert2

--- a/front/angular.json
+++ b/front/angular.json
@@ -27,6 +27,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "@ngxpert/hot-toast/styles.css",
               "src/styles.css"
             ],
@@ -91,6 +92,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "@ngxpert/hot-toast/styles.css",
               "src/styles.css"
             ],
