--- a/front/package.json
+++ b/front/package.json
@@ -11,10 +11,12 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^19.2.11",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.0",
+    "@angular/material": "^19.2.11",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/platform-server": "^19.2.0",
@@ -22,10 +24,12 @@
     "@angular/ssr": "^19.2.9",
     "@ngneat/overview": "6.1.1",
     "@ngxpert/hot-toast": "^4.1.2",
+    "@sweetalert2/ngx-sweetalert2": "^13.0.0",
     "@tailwindcss/postcss": "^4.1.4",
     "express": "^4.18.2",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.19.1",
     "tailwindcss": "^4.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
